// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`autolink.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
<https://www.example.com>

<hello@example.com>

<mailto:hello@example.com>

=====================================output=====================================
<https://www.example.com>

<hello@example.com>

<mailto:hello@example.com>

================================================================================
`;

exports[`empty-url.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
[link](<> "title")

[link](<>)

[link]()

---

![link](<> "title")

![link](<>)

![link]()

---

[link]: <> "title"

[link]: <>

=====================================output=====================================
[link](<> "title")

[link](<>)

[link](<>)

---

![link](<> "title")

![link](<>)

![link](<>)

---

[link]: <> "title"
[link]: <>

================================================================================
`;

exports[`encodedLink.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
[link](https://www.google.fr/()foo->bar)
[link](https://www.google.fr/foo->bar)
[link](https://www.google.fr/foo-%3Ebar)
[link](https://www.google.fr/foo-<bar)
[link](https://www.google.fr/foo-%3Cbar)

![link](https://www.google.fr/()foo->bar)
![link](https://www.google.fr/foo->bar)
![link](https://www.google.fr/foo-%3Ebar)
![link](https://www.google.fr/foo-<bar)
![link](https://www.google.fr/foo-%3Cbar)

[link]: https://www.google.fr/()foo->bar
[link]: https://www.google.fr/foo->bar
[link]: https://www.google.fr/foo-%3Ebar
[link]: https://www.google.fr/foo-<bar
[link]: https://www.google.fr/foo-%3Cbar

=====================================output=====================================
[link](<https://www.google.fr/()foo-%3Ebar>)
[link](https://www.google.fr/foo->bar) [link](https://www.google.fr/foo-%3Ebar)
[link](https://www.google.fr/foo-<bar) [link](https://www.google.fr/foo-%3Cbar)

![link](<https://www.google.fr/()foo-%3Ebar>)
![link](https://www.google.fr/foo->bar)
![link](https://www.google.fr/foo-%3Ebar)
![link](https://www.google.fr/foo-<bar)
![link](https://www.google.fr/foo-%3Cbar)

[link]: https://www.google.fr/()foo->bar
[link]: https://www.google.fr/foo->bar
[link]: https://www.google.fr/foo-%3Ebar
[link]: https://www.google.fr/foo-<bar
[link]: https://www.google.fr/foo-%3Cbar

================================================================================
`;

exports[`entity.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
[Test](http://localhost:8080/test?language=DE&currency=EUR)

=====================================output=====================================
[Test](http://localhost:8080/test?language=DE&currency=EUR)

================================================================================
`;

exports[`escaped-character-reference.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
[named](/hello?foo=&quot\\;bar)

[decimal](/hello?foo=&#34\\;bar)

[hexadecimal](/hello?foo=&#x22\\;bar)

[multiple](/hello?foo=&quot\\;&amp\\;bar)

[angle](</hello?foo=&quot\\;bar>)

![image](/hello?foo=&quot\\;bar)

[definition]: /hello?foo=&quot\\;bar

[&unknown\\;](/hello?foo=&unknown; "&unknown\\;")

=====================================output=====================================
[named](/hello?foo=&quot\\;bar)

[decimal](/hello?foo=&#34\\;bar)

[hexadecimal](/hello?foo=&#x22\\;bar)

[multiple](/hello?foo=&quot\\;&amp\\;bar)

[angle](/hello?foo=&quot\\;bar)

![image](/hello?foo=&quot\\;bar)

[definition]: /hello?foo=&quot\\;bar

[&unknown\\;](/hello?foo=&unknown; "&unknown;")

================================================================================
`;

exports[`long.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
[podium context](https://github.schibsted.io/finn/podium/tree/master/packages/podium-context)

=====================================output=====================================
[podium context](https://github.schibsted.io/finn/podium/tree/master/packages/podium-context)

================================================================================
`;

exports[`simple.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
[hello](#world)

=====================================output=====================================
[hello](#world)

================================================================================
`;

exports[`url.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
https://www.example.com/

=====================================output=====================================
https://www.example.com/

================================================================================
`;
